--- a/Languages/en.ini
+++ b/Languages/en.ini
@@ -23,6 +23,7 @@ Extra Options=Extra Options
 SpeedMod=
 SpeedDisplay=
 Reload NewSkins=Reload NewSkins
+Version=Version
 
 [OptionExplanations]
 Machine Options=Go to Machine Options to ajust more advanced stuff
